examples/test/testpolicy9910.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9910
  namespace: namespace193
spec:
  podSelector:
    matchLabels:
      key16: value28
      key37: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value0
      podSelector:
        matchLabels:
          key9: value15
          key29: value9
